internal/lang/test/testdata/errors/unknown_type.scampi
module main

type Bad {
  x: NonExistentType
}
